plugins {
    id 'groovy'
    id 'war'
    id 'application'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

application {
    mainClass = 'org.example.Main'
}

run {
    standardInput = System.in
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(Test).configureEach {
    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

dependencies {
    implementation 'org.apache.groovy:groovy:4.0.22'
    implementation 'org.apache.groovy:groovy-json:4.0.22'
    implementation 'org.postgresql:postgresql:42.7.2'
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.1.31'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.31'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testImplementation 'org.mockito:mockito-core:5.3.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
    testImplementation 'org.apache.groovy:groovy-test-junit5:4.0.22'
}

test {
    useJUnitPlatform()
}
